# PremierManagerScraper

./: README.md  main.py  managers.csv  pyproject.toml
managerscraper/: __init__.py  manager_info.py
