[tool.poetry]
name = "premiermanagerscraper"
version = "0.1.0"
description = ""
authors = ["YousefEZ <45167695+YousefEZ@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.11.0"
bs4 = "^0.0.1"
rich = "^13.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
